[package]
name = "ctj"
version = "0.1.7"
edition = "2021"
authors = ["lef237 <lef237k5@gmail.com>"]
description = "A command-line tool to convert CSV to JSON written in Rust"
readme = "README.md"
repository = "https://github.com/lef237/ctj"
license = "MIT"
keywords = ["csv", "json", "cli", "converter", "command-line"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.0"
indexmap = { version = "2.0", features = ["serde"] }
